# pyllparse

./: .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  config.yaml
.github/workflows/: CI.yml  dependabot-auto-merge.yaml  python-publish.yml
llparse/: C_compiler.py  __init__.py  capi_builder.py  compilator.py  constants.py  cython_builder.py  debug.py  dot.py  enumerator.py  frontend.py  header.py  llparse.py  settings.py  spanalloc.py  test.py  tire.py  trie.py
llparse/_tempita/: __init__.py  __init__.pyi  __main__.py  _looper.py  _looper.pyi  compat3.py
llparse/pybuilder/: __init__.py  builder.py  loopchecker.py  main_code.py  parsemap.py
llparse/pyfront/: __init__.py  code.py  containers.py  front.py  implementation.py  namespace.py  nodes.py  peephole.py  transform.py
pyparse/: C_compiler.py  __init__.py  compilator.py  constants.py  cython_builder.py  debug.py  dot.py  enumerator.py  frontend.py  header.py  llparse.py  settings.py  spanalloc.py  test.py  tire.py  trie.py
pyparse/pybuilder/: __init__.py  builder.py  loopchecker.py  main_code.py  parsemap.py
pyparse/pyfront/: containers.py  front.py  implementation.py  namespace.py  nodes.py  peephole.py  transform.py
requirements/: dev.txt
tests/: test_capi.py  test_compilator.py  test_frontend.py  test_loop_checker.py  test_span_allocator.py
